--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="js/lib/jquery-3.2.1.min.js">
 
     </script>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/navBar.css">
 </head>
 
