Top bar navgiation; can change body content

--- a/index.html
+++ b/index.html
@@ -13,53 +13,50 @@
 </head>
 
 <body>
+    <div class="container">
 
-    <nav>
-        <ul>
-            <li class="active">
-                <a href="/">About</a>
-            </li>
-            <li>
-                <a href="/print">Projects</a>
-            </li>
-            <li>
-                <a href="/web">Press</a>
-            </li>
-            <li>
-                <a href="/bio">Bio</a>
-            </li>
-        </ul>
-    </nav>
+        <h1 id="Title">DLD</h1>
+        <div class="tab">
+
+            <button class="tablinks active one">About</button>
+            <button class="tablinks two">Projects</button>
+            <button class="tablinks three">Press</button>
+            <button class="tablinks four">Bio</button>
+            <hr id="Line-Bar">
+        </div>
+    </div>
 
 
-    <div style="padding:20px;margin-top:80px;background-color:pink;height:1500px;">
-        <h1>TESTEST</h1>
-
-
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
-        <p>Some text some text some text some text..</p>
+    <div id="About" class="tabcontent" style="padding:20px;margin-top:80px;background-color:white;height:1500px;">
+        <h1>ABOUT</h1>
         <p>Some text some text some text some text..</p>
         <p>Some text some text some text some text..</p>
         <p>Some text some text some text some text..</p>
     </div>
 
+    <div id="Projects" class="tabcontent" style="padding:20px;margin-top:80px;background-color:white;height:1500px;">
+        <h1>PROJECTS</h1>
+        <p>Project ProjetProjetProjetProjetProjetProjet</p>
+        <p>ProjetProjetProjetProjetProjetProjet</p>
+        <p>ProjetProjetProjetProjetProjetProjetProjetProjet</p>
+    </div>
 
-    <script type="text/javascript" src="js/todos.js"></script>
+    <div id="Press" class="tabcontent" style="padding:20px;margin-top:80px;background-color:white;height:1500px;">
+        <h1>PRESS</h1>
+        <p>PressPressPressPressPressPressPress</p>
+        <p>PressPressPressPressPress</p>
+        <p>PressPressPressPressPressPressPress</p>
+    </div>
+
+    <div id="Bio" class="tabcontent" style="padding:20px;margin-top:80px;background-color:white;height:1500px;">
+        <h1>BIO</h1>
+        <p>BioBioBioBioBioBioBioBio</p>
+        <p>BioBioBioBioBioBioBioBioBio</p>
+        <p>BioBioBioBioBioBioBioBioBioBioBio</p>
+    </div>
+
+
+    <script type="text/javascript" src="js/navBar.js"></script>
 </body>
 
 </html>
