Setup Scrolling Parallex effect

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             <img src="img/Still_Images/profile pic_w shadow.png">
         </div>
 
-        <div class="background_img wrapper" id="rect_Horizontal">
-            <img class="scroll" src="img/Moving_Images/blush rectangle_1.jpg">
+        <div class="background_img wrapper scroll_Up_Fast" id="rect_Horizontal">
+            <img src="img/Moving_Images/blush rectangle_1.jpg">
         </div>
 
         <div class="background_img" id="x_Horizontal">
             <img src="img/Still_Images/xxxxxx_Vertical.png">
         </div>
 
-        <div class="background_img" id="leaf">
+        <div class="background_img scroll_Up_Slow" id="leaf">
             <img src="img/Moving_Images/leaf.png">
         </div>
 
@@ -65,15 +65,15 @@
             <p class="child names">BlessBox <br> ColourPop <br> Eggie <br> Eyeris Beauty <br> Glowing PR Agency <br> MELANGE <br> ...and more!</p>
         </div>
 
-        <div class="background_img" id="rect_Vertical">
+        <div class="background_img scroll_Up_Fast" id="rect_Vertical">
             <img src="img/Moving_Images/blush rectangle_2.jpg">
         </div>
 
-        <div class="background_img" id="geometric1">
+        <div class="background_img scroll_Up_Fast" id="geometric1">
             <img src="img/Moving_Images/geometric_1.png">
         </div>
 
-        <div class="background_img" id="marble">
+        <div class="background_img scroll_Up_Slow" id="marble">
             <img src="img/Moving_Images/marble texture rectangle.jpg">
         </div>
 
@@ -84,7 +84,7 @@
             <p class="child names">Jenn Im <br> Adelaine Morin <br> Sazan Hendrix <br> Honeysuckle <br> Gallucks <br> Kossip <br> ...and more!</p>
         </div>
 
-        <div class="background_img" id="square">
+        <div class="background_img scroll_Up_Fast" id="square">
             <img src="img/Moving_Images/blush square.jpg">
         </div>
 
