Added Random Scale In

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         </div>
-        <div class="box_img">
+        <div class="box_img scaleOut">
             <img src="img/Still_Images/profile pic_w shadow.png">
         </div>
 
@@ -60,7 +60,7 @@
 
         <div class="spacer_Long"></div>
 
-        <div class="box_img newLine parent">
+        <div class="box_img newLine parent scaleOut">
             <img src="img/Still_Images/Brands I've worked with_w shadow.png">
             <p class="child names">BlessBox <br> ColourPop <br> Eggie <br> Eyeris Beauty <br> Glowing PR Agency <br> MELANGE <br> ...and more!</p>
         </div>
@@ -79,7 +79,7 @@
 
         <div class="spacer"></div>
 
-        <div class="box_img newLine parent right">
+        <div class="box_img newLine parent right scaleOut">
             <img src="img/Still_Images/Influencers I've worked with_w shadow.png">
             <p class="child names">Jenn Im <br> Adelaine Morin <br> Sazan Hendrix <br> Honeysuckle <br> Gallucks <br> Kossip <br> ...and more!</p>
         </div>
@@ -117,7 +117,7 @@
 
     <script type="text/javascript" src="js/navBar.js"></script>
     <script type="text/javascript" src="js/parallex.js"></script>
-
+    <script type="text/javascript" src="js/scaleIn.js"></script>
 </body>
 
 </html>
